tests/baselines/reference/parserES5ForOfStatement18.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement18.ts(1,1): error TS2482: For-of statements are only available when targeting ECMAScript 6 or higher


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement18.ts (1 errors) ====
    for (var of of of) { }
    ~~~
!!! error TS2482: For-of statements are only available when targeting ECMAScript 6 or higher